# Astronomical-events

./: AstronomicalObject.cpp  AstronomicalObject.h  AstronomicalPhenomenon .cpp  AstronomicalPhenomenon .h  CMakeLists.txt  Constellations.cpp  Constellations.h  Eclipse.cpp  Eclipse.h  Planet.cpp  Planet.h  PlanetEvent.cpp  PlanetEvent.h  README.md  Satellite.cpp  Satellite.h  Star.cpp  Star.h  TEMA 1  constellationsBuilder.cpp  constellationsBuilder.h  main.cpp  mainTema2.cpp  meteorShower.h  meteorSower.cpp
